# blood_bank

./: .gitignore  Bien_Hoa.md  CONTRIBUTING.md  README.md  package-lock.json  package.json
.claude/: settings.local.json
BBMSDonorApp/: .gitignore  app.json  package-lock.json  package.json
backend/: createAdmin.js  hash.js  package-lock.json  package.json  resetPassword.js  server.js  setDns.js  test-db.js
backend-go/: Dockerfile  docker-compose.yml  go.mod  go.sum  main.go  nginx.conf
backend-python/: .gitignore  README.md  requirements.txt
backend-rust/: Cargo.toml  README.md
backend-rust/src/: app.rs  main.rs  state.rs
backend-rust/src/config/: env.rs
backend-rust/src/database/: mongodb.rs
backend-rust/src/dto/: mod.rs
backend-rust/src/dto/hospital/: confirm_handover.rs  create_usage.rs  dashboard.rs  mod.rs  request_blood.rs
backend-rust/src/errors/: app_error.rs
backend-rust/src/handlers/: hospital_handler.rs  mod.rs
backend-rust/src/middleware/: auth.rs  jwt.rs
backend-rust/src/models/: mod.rs
backend-rust/src/repository/: hospital_repository.rs  mod.rs
backend-rust/src/response/: api_response.rs
backend-rust/src/routes/: hospital_routes.rs  mod.rs
backend-rust/src/services/: hospital_service.rs  mod.rs
backend-rust/src/utils/: blood.rs  date.rs  mod.rs  validator.rs
backend_python_bloodlab_clean/: .env.example  main.py
backend_python_mvc/: .env.example  .gitignore  ARCHITECTURE.md  ENDPOINTS.md  README.md  main.py  nginx.backup.example.conf  requirements.txt
frontend/: index.html  location.json  package-lock.json  (+2 more)
(+249 files in other folders)
