[package]
name = "bbms-rust"
version = "0.1.0"
edition = "2024"

[dependencies]

axum = "0.8"

tokio = { version = "1", features = ["full"] }

tower = "0.5"

tower-http = { version = "0.6", features = ["cors","trace"] }

serde = { version = "1", features=["derive"] }

serde_json = "1"

mongodb = "3"

bson = { version = "2", features=["chrono-0_4"] }

chrono = { version="0.4", features=["serde"] }

dotenvy = "0.15"

jsonwebtoken = "10"

bcrypt = "0.17"

validator = { version="0.20", features=["derive"] }

thiserror = "2"

tracing = "0.1"

tracing-subscriber = "0.3"

uuid = { version="1", features=["v4","serde"] }

futures-util = "0.3"

regex = "1"
